--- a/lesson-12 - List Groups/index2.html
+++ b/lesson-12 - List Groups/index2.html
@@ -275,11 +275,48 @@
 
     </section>
 
-    <!-- hii -->
-  
-
   <!-- reviews list -->
+<section id="reviews" class="bg-light">
+    <div class="container-lg">
+        <div class="text-center">
+            <h2>Book Review</h2>
+            <p class="lead">what my students have said about the book</p>
+        </div>
 
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="list-group">
+                    <div class="list-group-item py-3">
+                        <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                        <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quo, quaerat qui aut quis itaque error eveniet, assumenda sint repellendus maxime autem dolorem delectus recusandae minus. Culpa quae necessitatibus ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, delectus. </p>
+                        <small>Review by Mario</small>
+                    </div>
+                    <div class="list-group-item py-3">
+                        <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                        <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quo, quaerat qui aut quis itaque error eveniet, assumenda sint repellendus maxime autem dolorem delectus recusandae minus. Culpa quae necessitatibus ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, delectus. </p>
+                        <small>Review by Mario</small>
+                    </div>
+                    <div class="list-group-item py-3">
+                        <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                        <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quo, quaerat qui aut quis itaque error eveniet, assumenda sint repellendus maxime autem dolorem delectus recusandae minus. Culpa quae necessitatibus ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, delectus. </p>
+                        <small>Review by Mario</small>
+                    </div>
+                    <div class="list-group-item py-3">
+                        <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                        <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quo, quaerat qui aut quis itaque error eveniet, assumenda sint repellendus maxime autem dolorem delectus recusandae minus. Culpa quae necessitatibus ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, delectus. </p>
+                        <small>Review by Mario</small>
+                    </div>
+                    <div class="list-group-item py-3">
+                        <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                        <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quo, quaerat qui aut quis itaque error eveniet, assumenda sint repellendus maxime autem dolorem delectus recusandae minus. Culpa quae necessitatibus ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, delectus. </p>
+                        <small>Review by Mario</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
 
   <!-- contact form -->
 
