--- a/lesson-19 - customization/index.html
+++ b/lesson-19 - customization/index.html
@@ -1,17 +1,19 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Net Ninja Pro - the Book</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-  <link href="/css/main.min.css" rel="stylesheet">
+  <link href="sass/main.css" rel="stylesheet">
   <style>
-    section{
+    section {
       padding: 60px 0;
     }
   </style>
 </head>
+
 <body>
 
   <!-- navbar -->
@@ -54,7 +56,7 @@
   </nav>
 
   <!-- main image & intro text -->
-  <section id="intro">
+  <section id="intro" class="bgblue">
     <div class="container-lg">
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-md-5 text-center text-md-start">
@@ -72,7 +74,7 @@
         <div class="col-md-5 text-center d-none d-md-block">
           <!-- tooltip -->
           <span class="tt" data-bs-placement="bottom" title="Net Ninja Pro book cover">
-            <img src="/assets/ebook-cover.png" class="img-fluid" alt="ebook">
+            <img src="assets/ebook-cover.png" class="img-fluid" alt="ebook">
           </span>
         </div>
       </div>
@@ -144,7 +146,7 @@
       </div>
       <div class="row my-5 g-5 justify-content-around align-items-center">
         <div class="col-6 col-lg-4">
-          <img src="/assets/kindle.png" class="img-fluid" alt="ebook">
+          <img src="assets/kindle.png" class="img-fluid" alt="ebook">
         </div>
         <div class="col-lg-6">
           
@@ -223,74 +225,94 @@
   </section>
 
   <!-- reviews list -->
-  <section id="reviews" class="bg-altlight">
+  <section id="reviews" class="bg-light">
     <div class="container-lg">
       <div class="text-center">
-        <h2><i class="bi bi-stars text-altdark"></i>Book Reviews</h2>
+        <h2><i class="bi bi-stars text-primary"></i>Book Reviews</h2>
         <p class="lead">What my students have said about the book...</p>
       </div>
-
+  
       <div class="row justify-content-center my-5">
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
               </div>
               <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
+              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error
+                veniam sit expedita
+                est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore
+                praesentium voluptate
+                repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
               </div>
               <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
+              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error
+                veniam sit expedita
+                est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore
+                praesentium voluptate
+                repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-half text-altdark"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-half text-primary"></i>
               </div>
               <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
+              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error
+                veniam sit expedita
+                est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore
+                praesentium voluptate
+                repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
               </div>
               <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
+              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error
+                veniam sit expedita
+                est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore
+                praesentium voluptate
+                repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-fill text-altdark"></i>
-                <i class="bi bi-star-half text-altdark"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-fill text-primary"></i>
+                <i class="bi bi-star-half text-primary"></i>
               </div>
               <h5 class="mb-1">A must-buy for every aspiring web dev</h5>
-              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error veniam sit expedita est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore praesentium voluptate repellat in id quisquam.</p>
+              <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur error
+                veniam sit expedita
+                est illo maiores neque quos nesciunt, reprehenderit autem odio commodi labore
+                praesentium voluptate
+                repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
           </div>
@@ -372,7 +394,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
           <p class="text-muted my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero exercitationem voluptatibus porro, hic asperiores fuga illo voluptates obcaecati deleniti veritatis sunt saepe quasi deserunt ex ipsum. Est possimus, aspernatur, vitae eligendi rem odit quaerat, ipsum pariatur ratione maxime delectus fuga minus accusamus dolores iusto maiores accusantium cumque magnam placeat quia!</p>
-          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#reg-modal">
+          <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#reg-modal">
             Register for Updates
           </button>
         </div>
