--- a/lesson-19 - customization/main/index2.html
+++ b/lesson-19 - customization/main/index2.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Net Ninja Pro - the Book</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/scss/main.css">
-
+    <link rel="stylesheet" href="scss/main.css">
     <!-- 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
@@ -42,17 +42,17 @@
             <!-- navbar links -->
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item nav-underline">
                         <a class="nav-link" href="#topics">About The Book</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-underline">
                         <a class="nav-link" href="#reviews">Reviews</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-underline">
                         <a class="nav-link" href="#contact">Get in Touch</a>
                     </li>
                     <li class="nav-item d-md-none">
-                        <a class="nav-link" href="#pricing">Pricing</a>
+                        <a class="nav-link  nav-underline" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item ms-2 d-none d-md-inline">
                         <a class="btn btn-secondary" href="#pricing">buy now</a>
@@ -76,7 +76,7 @@
                         dignissimos?</p>
                     <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
                     <!-- open sidebar / offcanvas -->
-                    <a href="#sidebar" class="d-block mt-3" data-bs-toggle="offcanvas" role="button"
+                    <a href="#sidebar" class="d-block mt-3 text-primary" data-bs-toggle="offcanvas" role="button"
                         aria-controls="sidebar">
                         Explore my other books
                     </a>
@@ -527,6 +527,7 @@
             </div>
         </div>
     </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
