comments margin bottom

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="row justify-content-center my-5">
         <div class="col-lg-8">
           <div class="list-group">
-            <div class="list-group-item py-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -286,7 +286,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -302,7 +302,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -318,7 +318,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -334,7 +334,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
