--- a/index.html
+++ b/index.html
@@ -20,44 +20,42 @@
   <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4">
     <div class="container-xxl">
       <!-- navbar brand / title -->
-      <a class="navbar-brand" href="#intro">
+      <a class="navbar-brand nav-bar-e" href="#intro">
         <span class="text-secondary fw-bold">
           <i class="bi bi-book-half"></i>
           Net Ninja Pro - the Book
-        </span>
-      </a>
-      <!-- toggle button for mobile nav -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
-        aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- navbar links -->
-      <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#topics">About The Book</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#reviews">Reviews</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Get in Touch</a>
-          </li>
-          <li class="nav-item d-md-none">
-            <a class="nav-link" href="#pricing">Pricing</a>
-          </li>
-          <li class="nav-item ms-2 d-none d-md-inline">
-            <a class="btn btn-secondary" href="#pricing">buy now</a>
-          </li>
-
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- main image & intro text -->
-  <section id="intro" class="bgblue">
+          </span>
+          </a>
+          <!-- toggle button for mobile nav -->
+          <button class="navbar-toggler nav-border" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
+            aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <!-- navbar links -->
+          <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#topics">About The Book</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#reviews">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Get in Touch</a>
+              </li>
+              <li class="nav-item d-md-none">
+                <a class="nav-link" href="#pricing">Pricing</a>
+              </li>
+              <li class="nav-item ms-2 d-none d-md-inline">
+                <a class="btn btn-secondary" href="#pricing">buy now</a>
+              </li>
+            </ul>
+            </div>
+            </div>
+            </nav>
+          <!-- main image & intro text -->
+          <section id="intro" class="bgblue">
     <div class="container-lg">
       <div class="row g-4 justify-content-center align-items-center">
         <div class="col-md-5 text-center text-md-start">
