--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4">
+  <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4  mx-md-2">
     <div class="container-xxl">
       <!-- navbar brand / title -->
       <a class="navbar-brand nav-bar-e" href="#intro">
@@ -54,6 +54,7 @@
             </div>
             </div>
             </nav>
+            
           <!-- main image & intro text -->
           <section id="intro" class="bgblue">
     <div class="container-lg">
