--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <div class="bg-header-main">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4  mx-md-2">
+    <nav class="navbar navbar-expand-md navbar-light text-primary pt-5 pb-4  mx-md-2">
       <div class="container-xxl">
         <!-- navbar brand / title -->
         <a class="navbar-brand nav-bar-e" href="#intro">
-          <span class="text-secondary fw-bold">
+          <span class="text-black fw-bold">
             <i class="bi bi-book-half"></i>
             Net Ninja Pro - the Book
           </span>
@@ -36,19 +36,19 @@
           <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#topics">About The Book</a>
+                <a class="nav-link text-black" href="#topics">About The Book</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#reviews">Reviews</a>
+                <a class="nav-link text-black" href="#reviews">Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Get in Touch</a>
+                <a class="nav-link text-black" href="#contact">Get in Touch</a>
               </li>
               <li class="nav-item d-md-none">
-                <a class="nav-link" href="#pricing">Pricing</a>
+                <a class="nav-link text-black" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item ms-2 d-none d-md-inline">
-                <a class="btn btn-secondary" href="#pricing">buy now</a>
+                <a class="btn btn-light" href="#pricing">buy now</a>
               </li>
             </ul>
           </div>
@@ -60,12 +60,16 @@
               <div class="row g-4 justify-content-center align-items-center">
                 <div class="col-md-5 text-center text-md-start">
                   <h1>
-                    <div class="display-2">Black-Belt</div>
-                    <div class="display-5 text-muted">Your Coding Skills</div>
+                    <div class="display-2 text-black" style="font-weight: 600;">Black-Belt</div>
+                    <div class="display-5 text-black" style="font-weight: 400;">Your Coding Skills</div>
                   </h1>
-                  <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
+                  <p class="p-main1 py-3 px-3 lead my-4 text-black ps-md-3" style="font-weight: 400;">Lorem ipsum dolor sit amet
+                    consectetur
+                    adipisicing
+                    elit.
+                    Laboriosam,
                     dignissimos?</p>
-                  <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+                  <a href="#pricing" class="btn btn-light btn-lg ">Buy Now</a>
                   <!-- open sidebar / offcanvas -->
                   <!--           
                                                   <a href="#sidebar" class="d-block mt-3" data-bs-toggle="offcanvas" role="button" aria-controls="sidebar">
@@ -84,7 +88,7 @@
 
   </div>
   <!-- pricing plans -->
-  <section id="pricing" class="bg-light mt-5">
+  <section id="pricing" class="bg-light">
     <div class="container-lg">
       <div class="text-center">
         <h2>Pricing Plans</h2>
@@ -270,7 +274,7 @@
       <div class="row justify-content-center my-5">
         <div class="col-lg-8">
           <div class="list-group">
-            <div class="list-group-item py-3 mg-comments">
+            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -286,7 +290,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments">
+            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -302,7 +306,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments">
+            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -318,7 +322,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments">
+            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -334,7 +338,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments">
+            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
