--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="row justify-content-center my-5">
         <div class="col-lg-8">
           <div class="list-group">
-            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -290,7 +290,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -306,7 +306,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
+            <div class="list-group-item py-3 mg-comments ">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -322,7 +322,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
+            <div class="list-group-item py-3 mg-comments">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
@@ -338,7 +338,7 @@
                 repellat in id quisquam.</p>
               <small>Review by Mario</small>
             </div>
-            <div class="list-group-item py-3 mg-comments border-1 rounded-3">
+            <div class="list-group-item py-3 mg-comments ">
               <div class="pb-2">
                 <i class="bi bi-star-fill text-primary"></i>
                 <i class="bi bi-star-fill text-primary"></i>
