hero bacground blur edit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="bg-header-main">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-light text-primary pt-5 pb-4  mx-md-2">
+    <nav class="navbar navbar-expand-md navbar-light text-primary pt-md-5 pt-5 pb-md-3 pb-1  mx-md-2">
       <div class="container-xxl">
         <!-- navbar brand / title -->
         <a class="navbar-brand nav-bar-e" href="#intro">
@@ -57,8 +57,8 @@
           <!-- main image & intro text -->
           <section id="intro" class="bgblue">
             <div class="container-lg">
-              <div class="row g-4 justify-content-center align-items-center">
-                <div class="col-md-5 text-center text-md-start">
+              <div class="row g-4 justify-content-center align-items-center row-bg-main pb-5 pt-lg-3">
+                <div class="col-md-5 text-center text-md-start pt-2">
                   <h1>
                     <div class="display-2 text-black" style="font-weight: 600;">Black-Belt</div>
                     <div class="display-5 text-black" style="font-weight: 400;">Your Coding Skills</div>
